--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <header class="top-nav">
         <div class="logo">another<br>world</div>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Our Games</a>
-            <a href="#">About Us</a>
-            <a href="#">Careers</a>
-        </nav>
+   <nav>
+    <a href="index.html">Home</a>
+    <a href="games.html">Our Games</a>
+    <a href="staff.html">Staff</a>
+</nav>
+
     </header>
 
     <h1 class="title">Let's Play</h1>
