--- a/staff.html
+++ b/staff.html
@@ -54,7 +54,9 @@
 
 <!-- FOOTER -->
 <footer class="footer">
-    <div class="footer-logo">another<br>world</div>
+    <div class="footer-logo">
+        <img src="https://github.com/Another-C0LOR/AnotherC0LORWeb/blob/master/icon.png?raw=true" alt="Logo">
+    </div>
 </footer>
 
 </body>
