--- a/index.html
+++ b/index.html
@@ -9,78 +9,8 @@
     <link rel="icon" type="image/png"
           href="https://github.com/Another-C0LOR/AnotherC0LORWeb/blob/master/icon.png?raw=true">
 
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Segoe UI', sans-serif;
-            background: #08000f;
-            color: white;
-            overflow-x: hidden;
-        }
-
-        /* Neon grid background */
-        body::before {
-            content: "";
-            position: fixed;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background: radial-gradient(circle at bottom, rgba(0,255,255,0.25), transparent 70%),
-                        linear-gradient(#0ff2 1px, transparent 1px),
-                        linear-gradient(90deg, #0ff2 1px, transparent 1px);
-            background-size: 100% 100%, 60px 60px, 60px 60px;
-            z-index: -1;
-            opacity: 0.15;
-        }
-
-        .top-logo, .bot-logo {
-            width: 120px;
-            margin: 20px auto;
-            display: block;
-            opacity: 0.9;
-        }
-
-        h1 {
-            text-align: center;
-            font-size: 48px;
-            margin-top: 20px;
-            text-shadow: 0 0 10px #0ff;
-        }
-
-        /* Game Card */
-        .game-box {
-            background: rgba(255, 255, 255, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            width: 60%;
-            margin: 50px auto;
-            padding: 25px 0;
-            border-radius: 10px;
-            text-align: center;
-            font-size: 28px;
-            backdrop-filter: blur(5px);
-            color: #fff;
-            box-shadow: 0 0 20px #0ff4;
-        }
-
-        /* Sections like screenshot */
-        .panel {
-            width: 80%;
-            margin: 10px auto;
-            padding: 15px;
-            background: rgba(255,255,255,0.07);
-            border: 1px solid rgba(255,255,255,0.1);
-            border-radius: 8px;
-            color: #bbb;
-            font-size: 14px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            font-size: 12px;
-            color: #999;
-        }
-    </style>
+    <!-- External CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -89,21 +19,27 @@
     <img class="top-logo"
          src="https://github.com/Another-C0LOR/AnotherC0LORWeb/blob/master/icon.png?raw=true">
 
-    <h1>Let's Play</h1>
+    <h1>Meet Our Team</h1>
 
-    <!-- Single Game -->
-    <div class="game-box">
-        C0LOR TAG
+    <!-- STAFF SECTION -->
+    <div class="staff-section">
+        <div class="staff-member">
+            <img src="https://i.pravatar.cc/100?img=1" alt="Staff 1">
+            <p>Staff 1</p>
+        </div>
+        <div class="staff-member">
+            <img src="https://i.pravatar.cc/100?img=2" alt="Staff 2">
+            <p>Staff 2</p>
+        </div>
+        <div class="staff-member">
+            <img src="https://i.pravatar.cc/100?img=3" alt="Staff 3">
+            <p>Staff 3</p>
+        </div>
+        <div class="staff-member">
+            <img src="https://i.pravatar.cc/100?img=4" alt="Staff 4">
+            <p>Staff 4</p>
+        </div>
     </div>
-
-    <!-- Panels like your screenshot -->
-    <div class="panel">Contact Form Submission Policy</div>
-    <div class="panel">Reporting</div>
-    <div class="panel">Room & Player Names</div>
-    <div class="panel">How to Join the Discord Channel</div>
-    <div class="panel">IP Bans</div>
-    <div class="panel">Discord Bans & Appeals</div>
-    <div class="panel">Accepting The Terms of Service & Privacy Policy</div>
 
     <!-- BOTTOM LOGO -->
     <img class="bot-logo"
