--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
     <!-- STAFF SECTION -->
     <div class="staff-section">
         <div class="staff-member">
-            <img src="https://i.pravatar.cc/100?img=1" alt="Staff 1">
-            <p>Staff 1</p>
+            <img src="" alt="Staff 1">
+            <p>M4TCHGT - CREATOR</p>
         </div>
         <div class="staff-member">
-            <img src="https://i.pravatar.cc/100?img=2" alt="Staff 2">
-            <p>Staff 2</p>
+            <img src="" alt="Staff 2">
+            <p>COLOR2 - CREATIVE LEAD</p>
         </div>
         <div class="staff-member">
-            <img src="https://i.pravatar.cc/100?img=3" alt="Staff 3">
-            <p>Staff 3</p>
+            <img src="" alt="Staff 3">
+            <p>COLOR1 - COSMETIC LEAD</p>
         </div>
         <div class="staff-member">
-            <img src="https://i.pravatar.cc/100?img=4" alt="Staff 4">
-            <p>Staff 4</p>
+            <img src="" alt="Staff 4">
+            <p>COLOR4 - MODERATION LEAD</p>
         </div>
     </div>
 
