--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
     <!-- STAFF SECTION -->
     <div class="staff-section">
         <div class="staff-member">
-            <img src="" alt="Staff 1">
+            <img src="https://th.bing.com/th/id/R.c9e5d12440f87866d053e7a17b5f681e?rik=QRQiDBeznKaDUQ&riu=http%3a%2f%2fwww.pngmart.com%2ffiles%2f7%2fSmiley-PNG-Transparent-Image.png&ehk=mROWb2DwhC6Lr3q%2bcozmEeMeVH0kkmFSsOFa9Py6J0s%3d&risl=&pid=ImgRaw&r=0" alt="Staff 1">
             <p>M4TCHGT - CREATOR</p>
         </div>
         <div class="staff-member">
-            <img src="" alt="Staff 2">
+            <img src="https://th.bing.com/th/id/R.c9e5d12440f87866d053e7a17b5f681e?rik=QRQiDBeznKaDUQ&riu=http%3a%2f%2fwww.pngmart.com%2ffiles%2f7%2fSmiley-PNG-Transparent-Image.png&ehk=mROWb2DwhC6Lr3q%2bcozmEeMeVH0kkmFSsOFa9Py6J0s%3d&risl=&pid=ImgRaw&r=0" alt="Staff 2">
             <p>COLOR2 - CREATIVE LEAD</p>
         </div>
         <div class="staff-member">
-            <img src="" alt="Staff 3">
+            <img src="https://th.bing.com/th/id/R.c9e5d12440f87866d053e7a17b5f681e?rik=QRQiDBeznKaDUQ&riu=http%3a%2f%2fwww.pngmart.com%2ffiles%2f7%2fSmiley-PNG-Transparent-Image.png&ehk=mROWb2DwhC6Lr3q%2bcozmEeMeVH0kkmFSsOFa9Py6J0s%3d&risl=&pid=ImgRaw&r=0" alt="Staff 3">
             <p>COLOR1 - COSMETIC LEAD</p>
         </div>
         <div class="staff-member">
-            <img src="" alt="Staff 4">
+            <img src="https://th.bing.com/th/id/R.c9e5d12440f87866d053e7a17b5f681e?rik=QRQiDBeznKaDUQ&riu=http%3a%2f%2fwww.pngmart.com%2ffiles%2f7%2fSmiley-PNG-Transparent-Image.png&ehk=mROWb2DwhC6Lr3q%2bcozmEeMeVH0kkmFSsOFa9Py6J0s%3d&risl=&pid=ImgRaw&r=0" alt="Staff 4">
             <p>COLOR4 - MODERATION LEAD</p>
         </div>
     </div>
